# Orca

./: .gitignore  Orca.py  README.md  install.bat  pyproject.toml
src/: .env  Orca.py  installer.py
src/Orca/: __init__.py  core.py
src/Orca/utils/: AIOApp.py  BarrierTracker.py  ClientManager.py  Context.py  EventBus.py  Events.py  FunctionParser.py  FunctionRegistry.py  LLM.py  Message.py  Metrics.py  STT.py  ScriptClient.py  ScriptManager.py  ScriptRuntime.py  StreamManager.py  StreamOutputHandler.py  StreamingDelimiterParser.py  TTS.py  WebSocket.py  WebSocketCommon.py
src/utils/: Context.py  EventBus.py  Events.py  Hyperparameters.py  LLM.py  STT.py  start_subprocess.py
